;; installed executables / public targets
(executables
  (preprocess
    (per_module
      ((action (run cppo -V OCAML:%{ocaml_version} %{input-file})) RNG)))
  (names lds test_BA_mmap test_lig_trans test_rot mol2pqrs tests xyz2pdb
         test_rbonds ff_score exit_enter mol2_rename lig_rot_sample
         place_ligand analyze_ligands test_dominate rank_tails
         optim_weights filter_ligands qm_ene_post_proc qm_minimize mol2filter
         mol2_clean scissors)
  (public_names lds test_BA_mmap test_lig_trans test_rot mol2pqrs tests
                xyz2pdb test_rbonds ff_score exit_enter mol2_rename
                lig_rot_sample place_ligand analyze_ligands test_dominate
                rank_tails optim_weights filter_ligands qm_ene_post_proc
                qm_minimize mol2filter mol2_clean scissors)
  (modules utls log mol a s fn ht l LO CLI BA BA1 lds ptable FF
           move params bbox V3 rot quat UFF grid math const mol2
           G3D shm ROI test_BA_mmap test_lig_trans test_rot mol2pqrs tests
           xyz2pdb test_rbonds SW ff_score rdkit QM_ene flags mol_graph
           exit_enter mol2_rename RNG optim SO3 lig_rot_sample place_ligand
           analyze_ligands pqrs SS atom bond test_dominate rank_tails
           optim_weights filter_ligands qm_ene_post_proc qm_minimize mol2filter
           mol2_clean scissors)
  (libraries bst batteries dolog minicli vector3 line_oriented nlopt
             bigarray gg genspir unix parany bitv pyml ocamlgraph cpm))
